Header not visible on the main page, main page text, file fixes

--- a/_sass/minima/_custom.scss
+++ b/_sass/minima/_custom.scss
@@ -1,6 +1,5 @@
 .intro {
-  &-description {
-    font-family: $caption-font-family;
-    @include relative-font-size(1.2);
-  }
+  font-family: $caption-font-family;
+  @include relative-font-size(1.2);
+  text-align: center;
 }
